[package]
name = "glove_trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"]}
ndarray-rand = "0.14.0"
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.1"
rand = "0.8.5"
plotters = "0.3.4"
rayon = "1.7"
flate2 = "1.0.26"
bincode = "1.3.3"
serde_json = "1.0"
# serde = { version = "1.0.160", features = ["derive"] }
